--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@500&family=Hind+Siliguri:wght@300&family=Lato&family=Montserrat:wght@100&family=Open+Sans:wght@300&family=Oswald:wght@300&family=Outfit:wght@200&family=Poppins:wght@300&family=Red+Hat+Display:wght@300&family=Roboto:ital,wght@1,100&family=Rubik:wght@300&family=Ubuntu&family=Varela+Round&display=swap');
+*{
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: 'Hind Siliguri', sans-serif
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,8 +12,18 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: black;
 }
-
+h1,h3,p,a{
+  color: #fff;
+}
+a{
+  text-decoration: none;
+  /* text-align: center; */
+}
+li{
+  list-style: none;
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
